# muzaia

./: .replit  LICENSE  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted--1-of-1-error-Next-js-14-2-30-is-outdated-learn-more-Unhandled-Runtime-Error-Error-Elem-1753048005942_1753048005943.txt  Pasted--src-app-page-tsx-Error-the-name-HomePage-is-defined-multiple-times-home-runner--1753033312276_1753033312277.txt  Pasted-0-Requirement-already-satisfied-uvicorn-0-29-0-in-home-runner-workspace-pythonlibs-lib-python3-1753027582349_1753027582350.txt  Pasted-Analisando-os-erros-que-voc-compartilhou-eles-indicam-problemas-de-conectividade-de-rede-em-uma-ap-1753174268558_1753174268559.txt  Pasted-Aqui-est-uma-arquitetura-modular-e-escal-vel-para-a-funcionalidade-de-chat-h-brido-IA-t-cni-1753133055343_1753133055343.txt  Pasted-Com-base-nas-tuas-ltimas-directrizes-eis-a-solu-o-reformulada-incorporando-Reposit-1753212142084_1753212142085.txt  Pasted-Correto-Concordo-plenamente-com-a-tua-an-lise-o-cadastro-e-gest-o-de-t-cnicos-jur-dicos-advogado-1753045270039_1753045270040.txt  Pasted-Error-API-Error-Details-at-createConsoleError-webpack-internal-app-pages-browser--1753174670138_1753174670138.txt  Pasted-Error-API-Error-at-createConsoleError-webpack-internal-app-pages-browser-node-mo-1753174150378_1753174150378.txt  Pasted-Este-erro-indica-que-a-fun-o-get-db-n-o-est-sendo-encontrada-no-m-dulo-app-database-connection--1753176850397_1753176850399.txt  Pasted-Este-erro-indica-que-o-arquivo-app-schemas-init-py-n-o-est-exportando-as-classes-LLMResponse-1753177141559_1753177141560.txt  Pasted-Este-erro-indica-que-o-m-dulo-app-schemas-glossario-n-o-existe-ou-n-o-est-configurado-corretament-1753177000481_1753177000482.txt  Pasted-Este-erro-ocorre-porque-o-Pydantic-v2-por-padr-o-n-o-permite-campos-extras-que-n-o-est-o-definidos-e-1753130911891_1753130911891.txt  Pasted-Excelente-Um-gloss-rio-jur-dico-controlado-e-version-vel-fundamental-para-garantir-que-a-IA--1753135990882_1753135990882.txt  (+17 more)
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  docker-compose-prod.yml  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: admin.py  admin_metrics.py  auth.py  glossario.py  handoff.py  legal_repository.py  llm_test.py  multimodal.py  professional_auth.py  professional_management.py  router.py  smart_chat.py  smart_legal_chat.py  system_health.py  technician.py  test_integration.py  test_simple.py  websocket.py
backend/app/core/: __init__.py  auth.py  cache.py  config.py  consensus.py  consensus_engine.py  consensus_engine.py.txt  conversation_orchestrator.py  exceptions.py  factory.py  legal_responder.py  llm_orchestrator.py  logging.py  orchestrator.py  pool.py  protocols.py  resilience.py  semantic_search.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  admin_user.py  api_llm.py  auth.py  base_llm.py  claude_llm.py  gemini_llm.py  glossario.py  human_handoff.py  legal_repository.py  local_llm.py  technician_management.py
backend/app/schemas/: __init__.py  glossario.py  llm.py
backend/app/utils/: __init__.py  security.py
backend/grafana/provisioning/dashboards/: backend-dashboard.yml  muzaia-overviewer.json
backend/grafana/provisioning/datasources/: prometheus-datasources.yml
backend/scripts/: create_auth_tables.py  deploy.sh  resolve-port-conflict.sh  seed_glossario.py  setup_db.py  start.sh
backend/sql/: init.sql
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_main_endpoints.py
backend/tests/load/: api-test.js
(+486 files in other folders)
